--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FWsHvifCYjoTYWThvcE1rEe%2Fcivio.io-prototype%3Fnode-id%3D109%253A608%26scaling%3Dscale-down%26page-id%3D0%253A1" allowfullscreen></iframe>
-
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FWsHvifCYjoTYWThvcE1rEe%2Fcivio.io-prototype%3Fnode-id%3D6%253A382%26scaling%3Dscale-down%26page-id%3D0%253A1" allowfullscreen></iframe>
 </body>
 </html>
